# SvgCompositor

./: CMakeLists.txt  qiproject.xml
app/: CMakeLists.txt  icon.cpp  icon.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
app/command/: assembly_command.cpp  assembly_command.hpp
app/controller/: action.hpp  button_bar_controller.cpp  button_bar_controller.hpp  compositor_controller.cpp  compositor_controller.hpp  editor_controller.cpp  editor_controller.hpp  tree_view_controller.cpp  tree_view_controller.hpp  view_controller.cpp  view_controller.hpp
app/graphics/: graphics_view.cpp  graphics_view.hpp  movable_svg_item.cpp
app/gui/: button_bar.cpp  button_bar.hpp  compositor_widget.cpp  compositor_widget.hpp  editor.cpp  editor.hpp  graphics_item.cpp  graphics_item.hpp  graphics_view.cpp  graphics_view.hpp  movable_svg_item.cpp  movable_svg_item.hpp  project_widget.cpp  project_widget.hpp
app/misc/: last_dir.cpp  last_dir.hpp  move_struct.hpp  project_model_enum.hpp  project_sort_filter_model.cpp  project_sort_filter_model.hpp
app/res/: media.qrc
app/ui/: button_bar.ui  mainwindow.ui
lib/: CMakeLists.txt
lib/svg_clean/: CMakeLists.txt
lib/svg_clean/src/: svg_clean.cpp
lib/svg_clean/standalone/: main.cpp
lib/svg_clean/svg_clean/: svg_clean.hpp
lib/svg_compose/: CMakeLists.txt
lib/svg_compose/src/: svg_assemblies_list.cpp  svg_assembly.cpp  svg_assembly_element.cpp  svg_assembly_size.cpp  svg_compose.cpp
lib/svg_compose/standalone/: main.cpp
lib/svg_compose/svg_compose/: svg_assemblies_list.hpp  svg_assembly.hpp  svg_assembly_element.hpp  svg_assembly_size.hpp  svg_compose.hpp
